remove doi in pub., pub. updates from KH

--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,17 +1,21 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
-- title: 'FALQON: Accelerating LoRA Fine-tuning with FP8 Arithmetic'
+- title: 'FALQON: Accelerating LoRA Fine-tuning with Low-Bit Floating-Point Arithmetic'
   authors:
   - Kanghyun Choi
   - Hyeyoon Lee
   - SunJong Park
   - Dain Kwon
   - Jinho Lee
+  buttons:
+  - type: github
+    link: https://github.com/iamkanghyunchoi/falqon
   date: '2025-12-05'
-  publisher: NeurIPS 2025
+  publisher: Neural Information Processing Systems (NeurIPS)
   tags:
   - Top Conf.
   - AI/ML
+  image: images_paper/falqon.png
   id: ''
   plugin: sources.py
   file: sources.yaml
@@ -99,7 +103,8 @@
   id: ''
   plugin: sources.py
   file: sources.yaml
-- title: 'DANCE++: Differentiable Accelerator/Network Co-Exploration with Hard Constraints
+- id: 10.1109/TCAD.2025.3582196
+  title: 'DANCE++: Differentiable Accelerator/Network Co-Exploration with Hard Constraints
     and Data-Free Training for Real-World Scenarios'
   authors:
   - Kanghyun Choi
@@ -109,15 +114,18 @@
   - Noseong Park
   - Youngsok Kim
   - Jinho Lee
-  date: '2025-06-13'
   publisher: IEEE Transactions on Computer-Aided Design of Integrated Circuits and
     Systems (TCAD)
+  date: '2025-06-13'
+  link: https://doi.org/g97rjq
+  buttons:
+  - type: paper
+    link: https://doi.org/10.1109/TCAD.2025.3582196
   tags:
   - SCI
   - AI/ML
   - Arch.
   image: images_paper/dance++_overview.png
-  id: ''
   plugin: sources.py
   file: sources.yaml
 - title: 'PathWeaver: A High-Throughput Multi-GPU System for Graph-Based Approximate
@@ -177,6 +185,15 @@
   publisher: AAAI Conference on Artificial Intelligence (AAAI)
   date: '2025-02-25'
   link: https://doi.org/g9fb3w
+  buttons:
+  - type: arxiv
+    link: https://arxiv.org/abs/2407.20021
+  - type: github
+    link: https://github.com/iamkanghyunchoi/mimiq
+  - type: slide
+    link: images/AAAI25_MimiQ_slides.pdf
+  - type: poster
+    link: images/AAAI25_MimiQ_poster.pdf
   tags:
   - Top Conf.
   - AI/ML
