--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,4 @@
-- content: 'Our paper <u>FALQON: Accelerating LoRA Fine-tuning with FP8 Arithmetic</u> has been accepted to NeurIPS 2025. Congratulations to authors!'
+- content: 'Our paper <u>FALQON: Accelerating LoRA Fine-tuning with Low-Bit Floating-Point Arithmetic</u> has been accepted to NeurIPS 2025. Congratulations to authors!'
   print_date: Sep. 2025
   date: 2025-09-22
 
