add LoCaLUT (HPCA)

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>LoCaLUT: Harnessing Capacity-Computation Tradeoffs for LUT-Based Inference in DRAM-PIM</u> has been accepted to HPCA 2026. Congratulations to authors!'
+  print_date: Nov. 2025
+  date: 2025-11-07
+
 - content: 'Our paper <u>FALQON: Accelerating LoRA Fine-tuning with Low-Bit Floating-Point Arithmetic</u> has been accepted to NeurIPS 2025. Congratulations to authors!'
   print_date: Sep. 2025
   date: 2025-09-22
