--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,12 @@
-- content: 'Our paper <u>LoCaLUT: Harnessing Capacity-Computation Tradeoffs for LUT-Based Inference in DRAM-PIM</u> has been accepted to HPCA 2026. Congratulations to authors!'
+- content: 'Our paper <u>Refined classification of YSOs and AGB stars by IR magnitudes, colors, and time-domain analysis with machine learning</u> has been accepted to The Astrophysical Journal. Looks like our pursuit of system scalability went stellar-system this time.'
+  print_date: Nov. 2025
+  date: 2025-11-30
+
+- content: 'Our paper <u>LoCaLUT: Harnessing Capacity-Computation Tradeoffs for LUT-Based Inference in DRAM-PIM</u> has been accepted to HPCA 2026. Congratulations to authors! This work was done in collaboration with HPCP Lab. (Prof. Youngsok Kim) and Core Lab (Prof. Hanjun Kim) at Yonsei Univ.'
+  print_date: Nov. 2025
+  date: 2025-11-07
+
+- content: 'Our paper <u>FaScalSQL: A Fast and Scalable GPU-Accelerated SQL Query Engine for Out-of-Memory Tables</u> has been accepted to ICDE 2026. Congratulations to authors! This is another work done in collaboration with HPCP Lab. (Prof. Youngsok Kim) at Yonsei Univ. and CISA Lab. (Prof. Joonsung Kim) at SKKU'
   print_date: Nov. 2025
   date: 2025-11-07
 
