--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,4 @@
-- content: 'Our paper <u>Refined classification of YSOs and AGB stars by IR magnitudes, colors, and time-domain analysis with machine learning</u> has been accepted to The Astrophysical Journal. Looks like our pursuit of system scalability went stellar-system this time.'
+- content: 'Our paper <u>Refined classification of YSOs and AGB stars by IR magnitudes, colors, and time-domain analysis with machine learning</u> has been accepted to The Astrophysical Journal. Looks like our pursuit of system scalability reached stellar-system scale this time.'
   print_date: Nov. 2025
   date: 2025-11-30
 
