--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,29 @@
+- title: "A Cost-Effective Near-Storage Processing Solution for Offline Inference of Long-Context LLMs"
+  authors:
+    - Hongsun Jang
+    - Jaeyong Song
+    - Changmin Shin
+    - Si Ung Noh
+    - Jaewon Jung
+    - Jisung Park
+    - Jinho Lee
+  date: '2026-03-26'
+  publisher: Proceedings of the 31st ACM International Conference on Architectural
+    Support for Programming Languages and Operating Systems (ASPLOS)
+  buttons:
+    - type: arxiv
+      link: https://arxiv.org/abs/2502.09921
+    - type: github
+      link: AIS-SNU/HILOS
+
+  tags:
+    - Top Conf.
+    - Syst. SW
+    - Arch. 
+    - AI/ML
+  image: images_paper/hilos.png
+  id: ""
+
 - title: "Refined classification of YSOs and AGB stars by IR magnitudes, colors, and time-domain analysis with machine learning"
   authors:
     - Hyunwook Jheonn
@@ -434,7 +460,7 @@
     - Youngsok Kim
     - Jinho Lee
   date: '2024-03-02'
-  publisher: Best Paper Award-Honorable Mention, International Symposium on High-Performance Computer Architecture (HPCA)
+  publisher: "<b>Best Paper Award-Honorable Mention!</b> International Symposium on High-Performance Computer Architecture (HPCA)"
   buttons:
     - type: arxiv
       link: http://arxiv.org/abs/2403.06664
