MLSys Initial Acceptance

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>GriNNder: Breaking the Memory Capacity Wall in Full-Graph GNN Training with Storage Offloading</u> has been accepted to MLSys 2026. Congratulations to authors and see you at Bellevue!'
+  print_date: Jan. 2026
+  date: 2026-01-29
+
 - content: 'Our paper <u>A Cost-Effective Near-Storage Processing Solution for Offline Inference of Long-Context LLMs</u> has been accepted to ASPLOS 2026. Congratulations to authors and see you at Pittsburgh!'
   print_date: Jan. 2026
   date: 2026-01-05
